# stonex-cms-amqp

./: .gitignore  ChangeLog.txt  NOTICE  README  README.md  conanfile.py
Examples/: CMakeLists.txt  conanfile.py
Examples/common/: CMakeLists.txt  ParameterParser .h  ParameterParser.cpp
Examples/receiver/: CMakeLists.txt  main.cpp  message_receiver.bat  run_test_receiver.bat
Examples/sender/: CMakeLists.txt  main.cpp  message_sender.bat  run_test_sender.bat
Examples/tests/: CMakeLists.txt  DevelopmentTest.cpp  DevelopmentTest.h  Test.cpp  Test.h  artemis-roles.properties  logger.xml  logger.xml.in  main.cpp
Examples/thread-sender/: CMakeLists.txt  MessageProcessor.cpp  MessageProcessor.h  main.cpp
stonex-cms-amqp/: CMakeLists.txt
stonex-cms-amqp/examples/: CMakeLists.txt
stonex-cms-amqp/examples/ThreadSender/: CMakeLists.txt  MessageProcessor.cpp  MessageProcessor.h  main.cpp
stonex-cms-amqp/examples/receiver/: CMakeLists.txt  logger.xml.in  main.cpp
stonex-cms-amqp/examples/send-receive/: CMakeLists.txt  Test.cpp  Test.h  artemis-users.properties  main.cpp
stonex-cms-amqp/examples/sender/: CMakeLists.txt  main.cpp
stonex-cms-amqp/stonex-cms-amqp-lib/: CMakeLists.txt
stonex-cms-amqp/stonex-cms-amqp-lib/API/: CMSBytesMessage.cpp  CMSBytesMessage.h  CMSConnection.cpp  CMSConnection.h  CMSConnectionFactory.cpp  CMSConnectionFactory.h  CMSMessage.cpp  CMSMessage.h  CMSMessageConsumer.cpp  CMSMessageConsumer.h  CMSMessageProducer.cpp  CMSMessageProducer.h  CMSMessagePropertiesImpl.cpp  CMSMessagePropertiesImpl.h  CMSQueue.cpp  CMSQueue.h  CMSSession.cpp  CMSSession.h  CMSTemporaryQueue.cpp  CMSTemporaryQueue.h  CMSTemporaryTopic.cpp  CMSTemporaryTopic.h  CMSTextMessage.cpp  CMSTextMessage.h  CMSTopic.cpp  CMSTopic.h  ClientState.h  ConnectionContext.cpp  ConnectionContext.h  URIParser.cpp  URIParser.h  stonex-cms-amqp-lib-defines.h
stonex-cms-amqp/stonex-cms-amqp-lib/activemq-cpp/src/main/cms/: CMSException.cpp  CMSException.h  CMSSecurityException.cpp  CMSSecurityException.h  IllegalStateException.cpp  IllegalStateException.h  InvalidClientIdException.cpp  InvalidClientIdException.h  InvalidDestinationException.cpp  InvalidDestinationException.h  InvalidSelectorException.cpp  InvalidSelectorException.h  MessageEOFException.cpp  MessageEOFException.h  MessageFormatException.cpp  MessageFormatException.h  MessageNotReadableException.cpp  MessageNotReadableException.h  MessageNotWriteableException.cpp  MessageNotWriteableException.h  ResourceAllocationException.cpp  ResourceAllocationException.h  TransactionInProgressException.cpp  TransactionInProgressException.h  TransactionRolledBackException.cpp  TransactionRolledBackException.h  UnsupportedOperationException.cpp  UnsupportedOperationException.h  XAException.cpp  XAException.h
stonex-cms-amqp/stonex-cms-amqp-lib/stonex-cms-amqp-cpp/: AMQPCMSMessageConverter.cpp  AMQPCMSMessageConverter.h  AMQPIDGenerator.cpp  AMQPIDGenerator.h  AsyncCallSynchronizer.cpp  AsyncCallSynchronizer.h  ClientState.cpp  ClientState.h  ConnectionContext.cpp  ConnectionContext.h  ConnectionFactoryImpl.cpp  ConnectionFactoryImpl.h  ConnectionImpl.cpp  ConnectionImpl.h  ConnectionMetadataImpl.cpp  ConnectionMetadataImpl.h  ConsumerContext.cpp  ConsumerContext.h  FactoryContext.cpp  FactoryContext.h  MessageConsumerImpl.cpp  MessageConsumerImpl.h  MessageProducerImpl.cpp  MessageProducerImpl.h  ProducerContext.cpp  ProducerContext.h  ProtonCppLibrary.cpp  ProtonCppLibrary.h  SessionContext.cpp  SessionContext.h  SessionImpl.cpp  SessionImpl.h
stonex-cms-amqp/stonex-cms-amqp-unittests/: CMakeLists.txt  ConnectionFactoryImpl_UT.cpp  ConnectionFactoryImpl_UT.h  ConnectionMetadataImpl_UT.cpp  ConnectionMetadataImpl_UT.h  MessageDefaultProperties_UT.cpp  MessageDefaultProperties_UT.h  Message_JMS_AMQ_Mapping_UT.cpp  Message_JMS_AMQ_Mapping_UT.h  Message_Properties_UT.cpp  Message_Properties_UT.h  ProtonCppLibrary_UT.cpp  ProtonCppLibrary_UT.h  URIParser_UT.cpp  URIParser_UT.h  proton-cpp-client-unittests.cpp
stonex-cms-amqp/stonex-cms-amqp-unittests/MOCK/: ExceptionListenerMock.cpp  ExceptionListenerMock.h  MessageTransformerMock.cpp  MessageTransformerMock.h  ProtonConnectionMock.cpp  ProtonConnectionMock.h  ProtonCppLibraryMock.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
test_package/amq_broker_config/: addresses.xml  artemis-roles.properties  artemis-users.properties  broker.xml  security_settings.xml
test_package/config/: core_messages_test.config  core_test.config  failing_core_test.config  logger.xml  test-suite-addresses.xml
